src/rvsdg/snapshots/eggcc__rvsdg__rvsdg2svg__tests__rvsdg2svg_basic.snap
---
source: src/rvsdg/rvsdg2svg.rs
expression: svg_new
---
<svg
	height="850"
	version="1.1"
	width="1775"
	xmlns="http://www.w3.org/2000/svg">
	<g>
		<rect
			fill="white"
			height="850"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="1775">
		</rect>
		<g>
			<path
				d="M 591.6667 0V 10Q 591.6667 20 581.6667 20H 178.75Q 168.75 20 168.75 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 591.6667 0V 10Q 591.6667 20 581.6667 20H 297.5Q 287.5 20 287.5 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 591.6667 0V 10Q 591.6667 20 601.6667 20H 827.5Q 837.5 20 837.5 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 591.6667 0V 10Q 591.6667 20 601.6667 20H 1302.5Q 1312.5 20 1312.5 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1183.3334 0V 20Q 1183.3334 30 1173.3334 30H 416.25Q 406.25 30 406.25 40V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1183.3334 0V 20Q 1183.3334 30 1173.3334 30H 1085Q 1075 30 1075 40V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1775 0V 820Q 1775 830 1765 830H 1193.3334Q 1183.3334 830 1183.3334 840V 850"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 287.5 400V 424Q 287.5 434 297.5 434H 1648.3334Q 1658.3334 434 1658.3334 444V 700"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1170 650V 662Q 1170 672 1180 672H 1681.6666Q 1691.6666 672 1691.6666 682V 700"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1675 800V 810Q 1675 820 1665 820H 601.6667Q 591.6667 820 591.6667 830V 850"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<rect
					fill="#80FF80"
					height="350"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="475">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					match
				</text>
				<g>
					<g
						transform="translate(25, 125)">
						<rect
							fill="white"
							height="200"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="200">
						</rect>
						<g>
							<path
								d="M 100 150V 165Q 100 175 100 175H 100Q 100 175 100 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										0
									</text>
								</g>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="133.33333"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="100"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="125"
						y="100">
						0
					</text>
				</g>
				<g>
					<g
						transform="translate(250, 125)">
						<rect
							fill="white"
							height="200"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="200">
						</rect>
						<g>
							<path
								d="M 66.666664 0V 10Q 66.666664 20 75 20H 75Q 83.33333 20 83.33333 30V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 133.33333 0V 20Q 133.33333 30 125 30H 125Q 116.666664 30 116.666664 40V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 165Q 100 175 100 175H 100Q 100 175 100 185V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										add
									</text>
								</g>
								<circle
									cx="33.333332"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="66.666664"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="133.33333"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="100"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="350"
						y="100">
						1
					</text>
				</g>
				<circle
					cx="118.75"
					cy="0"
					fill="black"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="237.5"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="356.25"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="237.5"
					cy="350"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(575, 50)">
				<rect
					fill="#FF8080"
					height="600"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="1000">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					loop
				</text>
				<g
					transform="translate(25, 75)">
					<rect
						fill="white"
						height="500"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="950">
					</rect>
					<g>
						<path
							d="M 237.5 0V 7.5Q 237.5 17.5 235.41666 17.5H 235.41666Q 233.33333 17.5 233.33333 27.5V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 237.5 0V 7.5Q 237.5 17.5 247.5 17.5H 523.3333Q 533.3333 17.5 533.3333 27.5V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 712.5 0V 22.5Q 712.5 32.5 714.5834 32.5H 714.5834Q 716.6667 32.5 716.6667 42.5V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 250 300V 462Q 250 472 260 472H 370Q 380 472 380 482V 500"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 250 300V 320Q 250 330 260 330H 823.3333Q 833.3333 330 833.3333 340V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 100 150V 165Q 100 175 110 175H 256.66666Q 266.66666 175 266.66666 185V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 400 300V 310Q 400 320 410 320H 556.6667Q 566.6667 320 566.6667 330V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 400 300V 310Q 400 320 410 320H 673.3333Q 683.3333 320 683.3333 330V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 400 300V 310Q 400 320 410 320H 856.6667Q 866.6667 320 866.6667 330V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 550 450V 468Q 550 478 560 478H 560Q 570 478 570 488V 500"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 700 450V 474Q 700 484 710 484H 750Q 760 484 760 494V 500"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 850 450V 456Q 850 466 840 466H 200Q 190 466 190 476V 500"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
					</g>
					<g>
						<g
							transform="translate(200, 200)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									add
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(50, 50)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									1
								</text>
							</g>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(350, 200)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									5
								</text>
							</g>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(500, 350)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									mul
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(650, 350)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									add
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(800, 350)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									eq
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<g>
						<circle
							cx="237.5"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="475"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="712.5"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
					<g>
						<circle
							cx="190"
							cy="500"
							fill="black"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="380"
							cy="500"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="570"
							cy="500"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="760"
							cy="500"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
				</g>
				<circle
					cx="262.5"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="500"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="737.5"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="405"
					cy="600"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="595"
					cy="600"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="785"
					cy="600"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(1625, 700)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						add
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="591.6667"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
			<circle
				cx="1183.3334"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="591.6667"
				cy="850"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
			<circle
				cx="1183.3334"
				cy="850"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

